@@ -1,4 +1,4 @@
-$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.521 2007/07/04 10:37:03 ph10 Exp $
+$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.522 2007/08/17 11:16:45 ph10 Exp $
 
 Change log file for Exim from version 4.21
 -------------------------------------------
@@ -78,6 +78,9 @@ PH/14 Implemented queue_only_load_latch.
 
 PH/15 Removed an incorrect (int) cast when reading the value of SIZE in a
       MAIL command. The effect was to mangle the value on 64-bit systems.
+
+PH/16 Another patch from the Sieve maintainer.
+
 
 
 Exim version 4.67
